query test function

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/bulma.min.css" />
     <link rel="stylesheet" href="./css/all.css" />
     <link rel="stylesheet" href="./css/font.css">
+    <link rel="stylesheet" type="text/css" href="print.css">
     
   </head>
   <body>
@@ -15,3 +16,5 @@
   </body>
 </html>
 <script src="https://kit.fontawesome.com/4017391914.js" crossorigin="anonymous"></script>
+<script src="print.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js" integrity="sha512-GsLlZN/3F2ErC5ifS5QtgpiJtWd43JWSuIgh7mbzZ8zBps+dvLusV+eNQATqgA/HdeKFVgA5v3S/cIrLF7QnIg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
